# MLOps-mushroom

./: .gitignore  README.md  main.py  pyproject.toml
01-Intro-ML/: 01_mlops_intro_notebook.ipynb
02-Experiment-Tracking/notebooks/: 00_data_preparation.ipynb  01_first_steps_without_tracking.ipynb  02_experiment_tracking_intro.ipynb  03_mlflow_advanced.ipynb
02-Experiment-Tracking/scenarios/: scenario-1.ipynb  scenario-2.ipynb  scenario-3.ipynb
mlartifacts/1/models/m-abc8e7cc634140508abac5fda7a7a887/artifacts/: MLmodel
mlartifacts/1/models/m-df0ae1e2884a479bb76a8e43b4eb79e0/artifacts/: MLmodel
notebooks/: MLOps_UdeM_Mushroom.ipynb  MLOps_UdeM_Mushroom_Part_I.ipynb  MLOps_UdeM_Mushroom_Part_II.ipynb  MLOps_UdeM_Mushroom_Part_I_Cursor.ipynb
src/: data_pipeline.py  data_preparation.py  flow.py  train.py  train_comparar.py
